@@ -1,4 +1,10 @@
-package edu.mondragon.we2.pinkAlert.service;
+ package edu.mondragon.we2.pinkAlert.service;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import edu.mondragon.we2.pinkAlert.model.Diagnosis;
 import edu.mondragon.we2.pinkAlert.model.Doctor;
@@ -8,238 +14,258 @@ import edu.mondragon.we2.pinkAlert.repository.DoctorRepository;
 import edu.mondragon.we2.pinkAlert.repository.PatientRepository;
 
 
-import org.easymock.EasyMock;
-import org.easymock.EasyMockSupport;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
-class DiagnosisServiceTest extends EasyMockSupport {
+@ExtendWith(MockitoExtension.class)
+class DiagnosisServiceTest {
 
+    @Mock
     private DiagnosisRepository diagnosisRepository;
+    
+    @Mock
     private DoctorRepository doctorRepository;
+    
+    @Mock
     private PatientRepository patientRepository;
-
+    
+    @InjectMocks
     private DiagnosisService diagnosisService;
-
+    
+    private Diagnosis diagnosis;
     private Doctor doctor;
     private Patient patient;
-    private Diagnosis diagnosis;
-
+    
     @BeforeEach
     void setUp() {
-        diagnosisRepository = mock(DiagnosisRepository.class);
-        doctorRepository = mock(DoctorRepository.class);
-        patientRepository = mock(PatientRepository.class);
-
-        diagnosisService = new DiagnosisService(diagnosisRepository,doctorRepository,patientRepository);
-
         doctor = new Doctor();
         doctor.setId(1);
-
+        
         patient = new Patient();
         patient.setId(2);
-
+        
         diagnosis = new Diagnosis();
         diagnosis.setId(10);
         diagnosis.setDate(LocalDate.now());
-        diagnosis.setDescription("Test diagnosis");
+        diagnosis.setDescription("Initial description");
+        diagnosis.setUrgent(false);
+        diagnosis.setReviewed(false);
+        diagnosis.setDoctor(doctor);
+        diagnosis.setPatient(patient);
     }
 
-    @Test
-    void testFindAll() {
-        EasyMock.expect(diagnosisRepository.findAll()).andReturn(List.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
-        List<Diagnosis> result = diagnosisService.findAll();
-
-        assertEquals(1, result.size());
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testFindById() {
-        EasyMock.expect(diagnosisRepository.findById(10)).andReturn(Optional.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
-        Diagnosis result = diagnosisService.findById(10);
-
-        assertNotNull(result);
-        assertEquals("Test diagnosis", result.getDescription());
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testFindByIdNotFound() {
-        EasyMock.expect(diagnosisRepository.findById(99)).andReturn(Optional.empty());
-
-        EasyMock.replay(diagnosisRepository);
-
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> diagnosisService.findById(99));
-
-        assertTrue(ex.getMessage().contains("Diagnosis not found"));
-
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testCreateDiagnosis() {
-        EasyMock.expect(doctorRepository.findById(1)).andReturn(Optional.of(doctor));
-        EasyMock.expect(patientRepository.findById(2)).andReturn(Optional.of(patient));
-
-        EasyMock.expect(diagnosisRepository.save(EasyMock.anyObject(Diagnosis.class))).andAnswer(() -> {
-                    Diagnosis d = (Diagnosis) EasyMock.getCurrentArguments()[0];
-                    d.setId(10);
-                    return d;
-                });
-
-        EasyMock.replay(diagnosisRepository, doctorRepository, patientRepository);
-
-        Diagnosis result = diagnosisService.create(diagnosis, 1, 2);
-
-        assertNotNull(result);
-        assertEquals(doctor, result.getDoctor());
-        assertEquals(patient, result.getPatient());
-        assertEquals("Test diagnosis", result.getDescription());
-
-        EasyMock.verify(diagnosisRepository, doctorRepository, patientRepository);
-    }
-
-    @Test
-    void testCreateDiagnosisDoctorNotFound() {
-        EasyMock.expect(doctorRepository.findById(1)).andReturn(Optional.empty());
-
-        EasyMock.replay(doctorRepository);
-
-        assertThrows(RuntimeException.class, () -> diagnosisService.create(diagnosis, 1, 2));
-
-        EasyMock.verify(doctorRepository);
-    }
-
-    @Test
-    void testCreateDiagnosisPatientNotFound() {
-        EasyMock.expect(doctorRepository.findById(1)).andReturn(Optional.of(doctor));
-
-        EasyMock.expect(patientRepository.findById(2)).andReturn(Optional.empty());
-
-        EasyMock.replay(doctorRepository, patientRepository);
-
-        assertThrows(RuntimeException.class, () -> diagnosisService.create(diagnosis, 1, 2));
-
-        EasyMock.verify(doctorRepository, patientRepository);
-    }
-
-    @Test
-    void testDeleteDiagnosis() {
-        diagnosisRepository.deleteById(10);
-        EasyMock.expectLastCall().once();
-
-        EasyMock.replay(diagnosisRepository);
-
-        diagnosisService.delete(10);
-
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testFindByDoctor() {
-        EasyMock.expect(diagnosisRepository.findByDoctor_Id(1)).andReturn(List.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
-        List<Diagnosis> result = diagnosisService.findByDoctor(1);
-
-        assertEquals(1, result.size());
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testFindByPatient() {
-        EasyMock.expect(diagnosisRepository.findByPatient_Id(2)).andReturn(List.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
-        List<Diagnosis> result = diagnosisService.findByPatient(2);
-
-        assertEquals(1, result.size());
-        EasyMock.verify(diagnosisRepository);
-    }
-
-    @Test
-    void testUpdateDiagnosis() {
-        Diagnosis updated = new Diagnosis();
-        updated.setDescription("Updated description");
-        updated.setDate(LocalDate.of(2025, 1, 1));
-        updated.setImagePath("image.png");
-
-        EasyMock.expect(diagnosisRepository.findById(10)).andReturn(Optional.of(diagnosis));
-
-        EasyMock.expect(doctorRepository.findById(1)).andReturn(Optional.of(doctor));
-
-        EasyMock.expect(patientRepository.findById(2)).andReturn(Optional.of(patient));
-
-        EasyMock.expect(diagnosisRepository.save(diagnosis)).andReturn(diagnosis);
-
-        EasyMock.replay(diagnosisRepository, doctorRepository, patientRepository);
-
-        Diagnosis result = diagnosisService.update(10, updated, 1, 2);
-
-        assertEquals("Updated description", result.getDescription());
-        assertEquals(LocalDate.of(2025, 1, 1), result.getDate());
-        assertEquals("image.png", result.getImagePath());
-        assertEquals(doctor, result.getDoctor());
-        assertEquals(patient, result.getPatient());
-
-        EasyMock.verify(diagnosisRepository, doctorRepository, patientRepository);
-    }
-
-    @Test
-    void testCreateForDoctorAndPatient() {
-        EasyMock.expect(doctorRepository.findById(1)).andReturn(Optional.of(doctor));
-
-        EasyMock.expect(patientRepository.findById(2)).andReturn(Optional.of(patient));
-
-        EasyMock.expect(diagnosisRepository.save(EasyMock.anyObject(Diagnosis.class))).andReturn(diagnosis);
-
-        EasyMock.replay(diagnosisRepository, doctorRepository, patientRepository);
-
-        Diagnosis result = diagnosisService.createForDoctorAndPatient(diagnosis, 1, 2);
-
-        assertNotNull(result);
-        EasyMock.verify(diagnosisRepository, doctorRepository, patientRepository);
-    }
-
+    
     @Test
     void testFindAllSortedByUrgency() {
-        EasyMock.expect(diagnosisRepository.findAllByOrderByUrgentDescDateDesc()).andReturn(List.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
+        // Arrange
+        List<Diagnosis> expected = Arrays.asList(diagnosis);
+        when(diagnosisRepository.findAllByOrderByUrgentDescDateDesc()).thenReturn(expected);
+        
+        // Act
         List<Diagnosis> result = diagnosisService.findAllSortedByUrgency();
-
-        assertEquals(1, result.size());
-        EasyMock.verify(diagnosisRepository);
+        
+        // Assert
+        assertEquals(expected, result);
+        verify(diagnosisRepository).findAllByOrderByUrgentDescDateDesc();
     }
 
     @Test
     void testFindByDateSortedByUrgency() {
-        LocalDate date = LocalDate.now();
-
-        EasyMock.expect(diagnosisRepository.findByDateOrderByUrgentDesc(date)).andReturn(List.of(diagnosis));
-
-        EasyMock.replay(diagnosisRepository);
-
+        // Arrange
+        LocalDate date = LocalDate.of(2024, 1, 15);
+        List<Diagnosis> expected = Arrays.asList(diagnosis);
+        when(diagnosisRepository.findByDateOrderByUrgentDesc(date)).thenReturn(expected);
+        
+        // Act
         List<Diagnosis> result = diagnosisService.findByDateSortedByUrgency(date);
-
-        assertEquals(1, result.size());
-        EasyMock.verify(diagnosisRepository);
+        
+        // Assert
+        assertEquals(expected, result);
+        verify(diagnosisRepository).findByDateOrderByUrgentDesc(date);
     }
 
-}
+    @Test
+    void testFindAll() {
+        // Arrange
+        List<Diagnosis> expected = Arrays.asList(diagnosis);
+        when(diagnosisRepository.findAll()).thenReturn(expected);
+        
+        // Act
+        List<Diagnosis> result = diagnosisService.findAll();
+        
+        // Assert
+        assertEquals(expected, result);
+        verify(diagnosisRepository).findAll();
+    }
+
+    @Test
+    void testFindById() {
+        // Arrange
+        when(diagnosisRepository.findById(10)).thenReturn(Optional.of(diagnosis));
+        
+        // Act
+        Diagnosis result = diagnosisService.findById(10);
+        
+        // Assert
+        assertEquals(diagnosis, result);
+        verify(diagnosisRepository).findById(10);
+    }
+
+    @Test
+    void testFindById_NotFound() {
+        // Arrange
+        when(diagnosisRepository.findById(99)).thenReturn(Optional.empty());
+        
+        // Act & Assert
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            diagnosisService.findById(99);
+        });
+        
+        assertTrue(exception.getMessage().contains("Diagnosis not found with id 99"));
+        verify(diagnosisRepository).findById(99);
+    }
+
+    @Test
+    void testCreate() {
+        // Arrange
+        Diagnosis newDiagnosis = new Diagnosis();
+        newDiagnosis.setDate(LocalDate.now());
+        newDiagnosis.setDescription("New diagnosis");
+        
+        when(doctorRepository.findById(1)).thenReturn(Optional.of(doctor));
+        when(patientRepository.findById(2)).thenReturn(Optional.of(patient));
+        when(diagnosisRepository.save(any(Diagnosis.class))).thenAnswer(invocation -> {
+            Diagnosis saved = invocation.getArgument(0);
+            saved.setId(100);
+            return saved;
+        });
+        
+        // Act
+        Diagnosis result = diagnosisService.create(newDiagnosis, 1, 2);
+        
+        // Assert
+        assertNotNull(result.getId());
+        assertEquals(doctor, result.getDoctor());
+        assertEquals(patient, result.getPatient());
+        assertEquals("New diagnosis", result.getDescription());
+        
+        verify(doctorRepository).findById(1);
+        verify(patientRepository).findById(2);
+        verify(diagnosisRepository).save(newDiagnosis);
+    }
+
+    @Test
+    void testCreate_DoctorNotFound() {
+        // Arrange
+        when(doctorRepository.findById(99)).thenReturn(Optional.empty());
+        
+        // Act & Assert
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            diagnosisService.create(diagnosis, 99, 2);
+        });
+        
+        assertTrue(exception.getMessage().contains("Doctor not found with id 99"));
+        verify(doctorRepository).findById(99);
+        verify(patientRepository, never()).findById(anyInt());
+    }
+
+    @Test
+    void testCreate_PatientNotFound() {
+        // Arrange
+        when(doctorRepository.findById(1)).thenReturn(Optional.of(doctor));
+        when(patientRepository.findById(99)).thenReturn(Optional.empty());
+        
+        // Act & Assert
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            diagnosisService.create(diagnosis, 1, 99);
+        });
+        
+        assertTrue(exception.getMessage().contains("Patient not found with id 99"));
+        verify(doctorRepository).findById(1);
+        verify(patientRepository).findById(99);
+    }
+
+
+
+    @Test
+    void testDelete() {
+        diagnosisService.delete(10);
+        
+        verify(diagnosisRepository).deleteById(10);
+    }
+
+    @Test
+    void testFindByDoctor() {
+
+        List<Diagnosis> expected = Arrays.asList(diagnosis);
+        when(diagnosisRepository.findByDoctor_Id(1)).thenReturn(expected);
+        
+        List<Diagnosis> result = diagnosisService.findByDoctor(1);
+        
+        assertEquals(expected, result);
+        verify(diagnosisRepository).findByDoctor_Id(1);
+    }
+
+    @Test
+    void testFindByPatient() {
+      
+        List<Diagnosis> expected = Arrays.asList(diagnosis);
+        when(diagnosisRepository.findByPatient_Id(2)).thenReturn(expected); 
+        List<Diagnosis> result = diagnosisService.findByPatient(2);
+        assertEquals(expected, result);
+        verify(diagnosisRepository).findByPatient_Id(2);
+    }
+
+    @Test
+    void testCreateForDoctorAndPatient() {
+       
+        Diagnosis newDiagnosis = new Diagnosis();
+        newDiagnosis.setDescription("Test diagnosis");
+        
+        when(doctorRepository.findById(1)).thenReturn(Optional.of(doctor));
+        when(patientRepository.findById(2)).thenReturn(Optional.of(patient));
+        when(diagnosisRepository.save(any(Diagnosis.class))).thenAnswer(invocation -> {
+            Diagnosis saved = invocation.getArgument(0);
+            saved.setId(100);
+            return saved;
+        });
+        Diagnosis result = diagnosisService.createForDoctorAndPatient(newDiagnosis, 1, 2);
+        assertNotNull(result.getId());
+        assertEquals(doctor, result.getDoctor());
+        assertEquals(patient, result.getPatient());
+        
+        verify(doctorRepository).findById(1);
+        verify(patientRepository).findById(2);
+        verify(diagnosisRepository).save(newDiagnosis);
+    }
+
+    @Test
+    void testCreateForDoctorAndPatient_DuplicateMethod() {
+        Diagnosis newDiagnosis = new Diagnosis();
+        
+        when(doctorRepository.findById(1)).thenReturn(Optional.of(doctor));
+        when(patientRepository.findById(2)).thenReturn(Optional.of(patient));
+        when(diagnosisRepository.save(any(Diagnosis.class))).thenReturn(newDiagnosis);
+        
+        Diagnosis result = diagnosisService.createForDoctorAndPatient(newDiagnosis, 1, 2);
+        
+        assertSame(newDiagnosis, result);
+        verify(doctorRepository).findById(1);
+        verify(patientRepository).findById(2);
+        verify(diagnosisRepository).save(newDiagnosis);
+    }
+    
+    @Test
+    void testConstructor() {
+        DiagnosisService service = new DiagnosisService(diagnosisRepository, doctorRepository, patientRepository);
+        assertNotNull(service);
+    }
+    
+ 
+} 
